--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,159 +1,116 @@
-.hero {
-  .hero_slider {
-    height: 100vh;
+.hero{
+    min-height: 95vh;
     width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    z-index: 1;
+    background-color: #F5F5F7;
+    border-bottom: 1px solid #c3c3c380;
     display: flex;
-    justify-content: center;
     align-items: end;
-    filter: none;
-    text-align: center;
-    
-    &::before{
-        position: absolute;
-        content: "";
-        height: 100%;
-        width: 100%;
-        top: 0;
-        left: 0;
-        background-image: url(../images/blur.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: .2;
-        z-index: -1;  
-    }
-    &::after {
-      position: absolute;
-      content: "";
-      height: 100%;
-      width: 100%;
-      top: 0;
-      left: 0;
-      background-image: linear-gradient(to top, #122223e7, rgba(0,0,0,0.2));
-      z-index: -1;
-    }
-    h2 {
-      font-size: 40px;
-      font-weight: 400;
-      color: #e8e4e4;
-      padding-bottom: 120px;
-      text-transform: uppercase;
-    }
-  }
-
-  .swiper-button-next {
-    &::after {
-      content: "→";
-      font-size: 22px;
-      border-radius: 100%;
-      background: rgba(255, 255, 255, 0.4);
-      width: 40px;
-      height: 40px;
-      display: inherit;
-      justify-content: inherit;
-      align-items: inherit;
-      color: #fff;
-    }
-    span {
-      font-size: 15px;
-      text-transform: uppercase;
-      color: #fff;
-      margin-right: 7px;
-    }
-  }
-  .swiper-button-prev {
-    
-    &::before {
-      content: "←";
-      font-size: 22px;
-      border-radius: 100%;
-      background: rgba(255, 255, 255, 0.1);
-      width: 40px;
-      height: 40px;
-      display: inherit;
-      justify-content: inherit;
-      align-items: inherit;
-      color: #fff;
-    }
-    &::after {
-      content: "";
-    }
-    span {
-      font-size: 15px;
-      text-transform: uppercase;
-      color: #fff;
-      margin-left: 7px;
-    }
-  }
-  .swiper-button-disabled {
-    opacity: 0.75;
-    &::before {
-        color: #d2d0d0;
-      }
-  }
+    position: sticky;
+    top: 0;
+    // z-index: -1;
 }
-
-.common_hero {
-  position: relative;
-  .hero_slider {
-    height: 300px;
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.sticky-hero{
+    opacity: .2;
+    transition: all linear .5s;
+}
+.hero_wrapper{
+    .hero_content{
+        .key_tag{
+            padding: 5px 30px;
+            border-radius: 35px;
+            background-color: $whiteColor;
+            border-radius: 35px;
+            display: inline-block;
+            color: rgb(31, 86, 126);
+            font-size: 16px;
+            box-shadow: $primaryBoxShadow;
+        }
+       
+        h1 {
+            font-size: 50px;
+            line-height: 60px;
+            background: linear-gradient(90deg, rgb(31, 86, 126) 0%, #419aa8 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-transform: uppercase;
+            font-weight: 900;
+            margin: 25px 0 15px 0;
+          }
+        p{
+            font-size: 15px;
+            line-height: 22px;
+            font-weight: 400;
+            color: #333335;
+            padding-right: 130px;
+        }
+        .hero_buttons{
+            display: flex;
+            align-items: center;
+            margin-top: 45px;
+            .btn_one{
+                padding: 8px 40px;
+                background-color: $primaryColor;
+                border-radius: 35px;
+                color: $whiteColor;
+                font-weight: 400;
+                font-size: 15px;
+                border: 1px solid $primaryColor;
+                cursor: pointer;
+                &:hover{
+                    background-color: $whiteColor;
+                    color: $primaryColor;
+                    transition: all linear .2s;
+                }
+            }
+            .btn_two{
+                background-color: $whiteColor;
+                color: $primaryColor;
+                margin-left: 15px;
+                &:hover{
+                    background-color: $primaryColor;
+                    color: $whiteColor;
+                    transition: all linear .2s;
+                }
+            }
+        }
+    }
+}
+.slider_img{
     position: relative;
-    z-index: 1;
+    height: auto;
+    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: end;
-    filter: none;
-    
-    &::before{
+    align-items: center;
+    &::after{
         position: absolute;
-        content: "";
+        content: '';
+        height: 30%;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(180deg, #F5F5F500 0%, #f5f5f5 82%);
+        z-index: 2;
+    }
+    img{
         height: 100%;
         width: 100%;
-        top: 0;
-        left: 0;
-        background-image: url(../images/blur.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        opacity: .2;
-        z-index: -1;  
+        object-fit: contain;
     }
-    &::after {
-      position: absolute;
-      content: "";
-      height: 100%;
-      width: 100%;
-      top: 0;
-      left: 0;
-      background-image: linear-gradient(to top, #122223e7, rgba(0,0,0,0.2));
-      z-index: -1;
-    }
-    h2 {
-      font-size: 40px;
-      font-weight: 400;
-      color: #e8e4e4;
-      padding-bottom: 120px;
-      text-transform: uppercase;
-    }
-  }
-  .page_name{
-    position: absolute;
-    bottom: 60px;
-    left: 0;
-    z-index: 3;
-    width: 100%;
-    text-align: center;
-    color: #f3f3f3;
-    font-weight: 400;
-    font-size: 32px;
-  }
+}
+// .swiper-slide-active{
+//     display: none;
+// }
+
+// .swiper-slide-next{
+//     .slider_img{
+//         display: none !important;
+//     }
+// }
+
+.swiper-slide{
+    opacity: 0 !important;
+}
+.swiper-slide-active{
+    opacity: 1 !important;
 }
