--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,72 +1,57 @@
 /*<><><><><><><<><><><><><<><><><><>
+
 Template Name: 
 Template URL : 
 Description  :
-Author       : 
+Author       : Fahim Ahmed
 Author URL   :
-Version      : 1.1.1
+Version      : 1.0
+
 <><><><><><><<><><><><><<><><><><>*/
 
 /*----------------------------------
        HTML  INDEX LIST
+
 01. 
 02. 
 03. 
+
 -------------------------------------*/
 
 
 
-/*     Google Font Connections 
+/*---------------------------------
+       CSS INDEX LIST
+
+01. 
+02.  
+03. 
+
+------------------------------------*/
+
+
+/*     Google Font Connections
 -------------------------------------*/
-
-
+@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;600;700;800;900&family=Noto+Serif:wght@400;700&family=Open+Sans:wght@400;500;600;700;800&family=Roboto:wght@300;400;500;700;900&display=swap');
 
 /*      SCSS Pages Connections 
 <><><><<><<><><<><><><><><><<><><><>*/
 
-@import "../scss/common_css/common";
-
+@import "../scss/common_css/common"; 
 @import "../scss/mixin_scss/mixin";
+@import "../scss/variable_scss/variable";
+
+
+/*     SCSS Sections Connections 
+<><><><<><<><><<><><><><><><<><><><>*/
+@import "../scss/hero";  
+@import "../scss/header";  
+@import "../scss/introduce";  
+@import "../scss/mobile";  
+@import "../scss/buy";  
+@import "../scss/dark";  
+@import "../scss/review";  
+@import "../scss/footer";  
+
+
  
-@import "../scss/variable_scss/variable"; 
-
-
-
-
-
-/*     SCSS Sections Connections  
-------------------------------------*/
-@import "../scss/header";
-@import "../scss/footer";
-@import "../scss/hero";
-@import "../scss/about";
-@import "../scss/gallery";
-@import "../scss/commonSection";
-@import "../scss/amenities";
-@import "../scss/contact";
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
