--- a/scss/variable_scss/_variable.scss
+++ b/scss/variable_scss/_variable.scss
@@ -2,11 +2,11 @@
 -----------------------------------*/
 
 // Colors
-$primaryColor: #45b85f ;
-$secondaryColor: #2c3691;
+$primaryColor: #1b71ae ;
+$secondaryColor: #428590;
 $blackColor: #333;
 $whiteColor:#fff;
-$offwhiteColor:#e8e8e8; 
+$offwhiteColor:#c7c6c6; 
 $redColor:#FF4A4A;
 $greenColor: #19891f;
 $yellowColor: #F5EA5A;
@@ -30,4 +30,4 @@ $primaryBoxShadow: 1px 1.332px 3px 1px rgba(163, 161, 161, 0.221);
 $secondary-boxShadow: 1px 1.332px 4px 2px rgb(163 161 161 / 30%);
 
 
-// font-family: 'Kalnia', serif;
+ 
