--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,122 +1,137 @@
+.follow_part {
+    background-color: #fff;
+    position: relative;
+    z-index: 2;
+    padding-top: 60px;
+
+    .follow_wrapper {
+        .follow_item {
+            text-align: center;
+            border-right: 1px solid #28375259;
+            width: 100%;
+            padding: 20px 0;
+ 
+            img {
+                height: 60px;
+                width: 60px; 
+                object-fit: contain;
+            }
+
+            .f_title {
+                font-size: 15px;
+                font-weight: 500;
+                color: #283752;
+                padding-top: 20px;
+            }
+
+            .f_text {
+                font-size: 13px;
+                font-weight: 400;
+                color: #4d4e4f;
+            }
+        }
+
+        .border_none {
+            border-right: 1px solid transparent;
+        }
+    }
+}
+
 .footer {
-  background-color: rgba(204, 204, 204, 0.882);
-  position: relative;
-  z-index: 2;
-  border-top-left-radius: 46px;
-  border-top-right-radius: 46px;
-  .fotter_main {
-    //   background-color: #f0f0f0;
-    .footer_wrapper {
-      padding: 80px 0 40px 0;
-      .footer_wrap {
-        .footer_logo {
-          img {
-            max-height: 90px;
-            width: auto;
-            object-fit: contain;
-          }
-          padding-bottom: 12px;
-        }
-        p {
-          font-size: 14px;
-          font-weight: 400;
-          color: #333333;
-          font-family: "Roboto", sans-serif;
-          line-height: 20px;
-        }
-        h4 {
-          font-size: 15px;
-          font-weight: 500;
-          color: #242424;
-          padding-bottom: 10px;
-        }
-        h5 {
-          font-size: 14px;
-          color: #242424;
-          line-height: 16px;
-          font-family: "Roboto", sans-serif;
-        }
-        ul {
-          padding-left: 16px;
-          li {
-            list-style: disc;
-            padding-bottom: 5px;
-            font-size: 14px;
-            color: #292828;
-            a {
-              &:hover {
-                color: $secondaryColor;
-              }
+    padding-top: 30px;
+    background-color: #fff;
+    position: relative;
+    z-index: 2;
+
+    .footer_content {
+        background: linear-gradient(170deg, #2D3140 0%, #19272C 100%);
+        border-top-left-radius: 150px;
+        border-top-right-radius: 150px;
+        padding-bottom: 80px;
+        .footer_wrapper {
+            padding-top: 65px;
+
+            h2 {
+                font-size: 38px;
+                font-weight: 700;
+                color: $whiteColor;
+                text-align: center;
+                padding-bottom: 80px;
             }
-          }
-        }
-        .social_links {
-          display: flex;
-          i {
-            font-size: 17px;
-            color: #505050;
-            height: 30px;
-            width: 30px;
-            border: 1px solid #898989;
-            border-radius: 5px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-right: 5px;
-            cursor: pointer;
-            &:hover {
-              color: #000;
-              border: 1px solid #333;
+
+            .footer_wrap {
+                p {
+                    font-size: 15px;
+                    font-weight: 300;
+                    color: #d1cece;
+                    padding-right: 60px;
+                }
+
+                h4 {
+                    font-size: 18px;
+                    font-weight: 500;
+                    color: $whiteColor;
+                    padding-bottom: 10px;
+                }
+                h5 {
+                    font-size: 14px;
+                    font-weight: 300;
+                    color: #e2dfdff6;
+                    padding-bottom: 20px;
+                }
+                ul{
+                    li{
+                        a{
+                            font-size: 14px;
+                            font-weight: 400;
+                            color: #e2dfdfcd;  
+                            &:hover{
+                                color: $whiteColor;
+                            }
+                        }
+                    }
+                }
             }
-          }
+         .subscribe_input {
+                position: relative;
+                display: flex;
+                align-items: center;
+               .from_control {
+                    background-clip: padding-box;
+                    background-color: rgba(255,255,255,.0745098039);
+                    border: 1px solid rgba(213,213,213,.4784313725);
+                    color: #f8f8f8;
+                    display: block;
+                    height: 42px;
+                    padding: 0 8px;
+                    width: 100%;
+                    &:focus{
+                        outline: 0;
+                    }
+                }
+              .subscribe_btn {
+                    height: 42px;
+                    padding: 0 15px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #fff;
+                    color: rgba(0,0,0,.9019607843);
+                    font-size: 13px;
+                }
+            }
         }
-        .qr_img {
-          display: flex;
-          // justify-content: center;
-          padding-top: 20px;
-          img {
-            height: 100px;
-            width: 100px;
-            object-fit: contain;
-          }
-        }
-        .product_list {
-          padding-left: 0px;
-          li {
-            list-style: none;
-          }
-        }
-      }
     }
-    .footer_bottom {
-      padding: 20px 0;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-top: 1px solid #47474753;
-      span {
-        font-size: 13px;
-        font-weight: 400;
-        color: #333;
-      }
-      ul {
-        li {
-          display: inline-block;
-          margin-left: 10px;
-          a {
-            font-size: 13px;
-            color: #333;
-            cursor: pointer;
-            &:hover {
-              color: $primaryColor;
-            }
-            i {
-              font-size: 10px;
-              margin-right: 2px;
-            }
-          }
+
+    .copyright {
+        text-align: center;
+        background-color: #283752;
+        padding: 10px 0;
+
+        span {
+            color: $whiteColor;
+            font-size: 15px;
+            font-weight: 400;
         }
-      }
     }
-  }
 }
