--- a/scss/common_css/_common.scss
+++ b/scss/common_css/_common.scss
@@ -1,217 +1,192 @@
 /*      Theme Default CSS
 -----------------------------------*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body{
-    font-size: 16px;
-    line-height: 24px;
-    scroll-behavior: smooth;
-    font-weight: 400;
-    background-color: #122223;
-    color: #c7c7c7;
-    font-family: "Kalnia", serif;
-    // font-family: 'Roboto', sans-serif;
-    // font-family: 'Poppins', sans-serif;
-  }
-  :root{
-    --swiper-navigation-size: auto;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  a {  
-    text-decoration: none;
-  }
-  
-  .w-img img {
-    width: 100%;
-  }
-  
-  .m-img img {
-    max-width: 100%;
-  }
-  
-  a,
-  .btn,
-  button,
-  span,
-  p,
-  i,
-  input,
-  select,
-  textarea,
-  li,
-  img,
-  svg path,
-  *::after,
-  *::before,
-  .transition-3,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    -webkit-transition: all 0.3s ease-out 0s;
-    -moz-transition: all 0.3s ease-out 0s;
-    -ms-transition: all 0.3s ease-out 0s;
-    -o-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s;
-  }
-  
-  a:focus,
-  .button:focus {
-    text-decoration: none;
-    outline: none;
-  }
-  
-  a:focus,
-  a:hover {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  a,
-  button {
-    color: inherit;
-    outline: none;
-    border: none;
-    background: transparent;
-  }
-  
-  button:hover {
-    cursor: pointer;
-  }
-  
-  button:focus {
-    outline: 0;
-    border: 0;
-  }
-  
-  .uppercase {
-    text-transform: uppercase;
-  }
-  
-  .capitalize {
-    text-transform: capitalize;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    color: #2c3941;
-    line-height: 24px;
-    -webkit-transition: all 0.3s ease-out 0s;
-    -moz-transition: all 0.3s ease-out 0s;
-    -ms-transition: all 0.3s ease-out 0s;
-    -o-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s; 
-  }
-  
-  h1 {
-    font-size: 40px;
-  }
-  
-  h2 {
-    font-size: 36px;
-  }
-  
-  h3 {
-    font-size: 24px;
-  }
-  
-  h4 {
-    font-size: 20px;
-  }
-  
-  h5 {
-    font-size: 16px;
-  }
-  
-  h6 {
-    font-size: 14px;
-  }
-  
-  ul {
-    margin: 0px;
-    padding: 0px;
-  }
-  
-  li {
-    list-style-type:none;
-  }
-  
-  p{
-    font-size: 15px;
-    line-height: 22px;
-    color: #737070;
+body{
+  font-family:'Roboto', sans-serif;
+  scroll-behavior: smooth;
+  background-color: #fff;
+  // Default Font Style
+  font-weight: 400;
+  font-size: 16px;
+  color: #333333;
+  line-height: 24px;
+}
+ 
+a {
+  text-decoration: none;
+}
 
-  }
-  
-  
-  /*
-      - Input Placeholder
-  -----------------------------------------*/
-  *::-moz-placeholder {
-    color: #2c3941;
-    font-size: 14px;
-    opacity: 1;
-  }
-  
-  *::placeholder {
-    color: #2c3941;
-    font-size: 14px;
-    opacity: 1;
-  }
-  
-  /*--
-      - Common Classes
-  -----------------------------------------*/
-  .fix{
-    overflow: hidden;
-  }
-  
-  .clear{
-    clear: both;
-  }
-  
-  .f-left{
-    float: left;
-  }
-  
-  .f-right {
-    float: right;
-  }
-  
-  .z-index-1 {
-    z-index: 1;
-  }
-  .overflow-y-visible {
-    overflow-x: hidden;
-    overflow-y: visible;
-  }
-  
-  .p-relative {
-    position: relative;
-  }
-.container{
-  max-width: 1120px;
+.w-img img {
+  width: 100%;
+}
+
+.m-img img {
+  max-width: 100%;
+}
+
+a,
+.btn,
+button,
+span,
+p,
+i,
+input,
+select,
+textarea,
+li,
+img,
+svg path,
+*::after,
+*::before,
+.transition-3,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+}
+
+a:focus,
+.button:focus {
+  text-decoration: none;
+  outline: none;
+}
+
+a:focus,
+a:hover {
+  color: inherit;
+  text-decoration: none;
 }
 
 
-.opacity-0{
-  opacity: 0;
+
+.uppercase {
+  text-transform: uppercase;
 }
 
-.red-color{
-  color: rgb(218, 0, 0);
+.capitalize {
+  text-transform: capitalize;
 }
 
-.green-color{
-  color: rgb(2, 154, 2);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #2c3941;
+  line-height: 24px;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s; 
 }
+
+h1 {
+  font-size: 50px;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+h5 {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+h6 {
+  font-size: 15px;
+  font-weight: 400;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+li {
+  list-style: none;
+}
+
+p{
+  font-size: 14px;
+  line-height: 22px;
+  color: rgb(113, 112, 112);
+}
+
+
+/*
+    - Input Placeholder
+-----------------------------------------*/
+*::-moz-placeholder {
+  color: #7F8D9D;
+  font-size: 14px;
+  opacity: 1;
+}
+
+*::placeholder {
+  color: #7F8D9D;
+  font-size: 14px;
+  opacity: 1;
+}
+
+/*--
+    - Common Classes
+-----------------------------------------*/
+.fix{
+  overflow: hidden;
+}
+
+.clear{
+  clear: both;
+}
+
+.f-left{
+  float: left;
+}
+
+.f-right {
+  float: right;
+}
+
+.z-index-1 {
+  z-index: 1;
+}
+.overflow-y-visible {
+  overflow-x: hidden;
+  overflow-y: visible;
+}
+.overflow-x-visible {
+  overflow-x: visible;
+  overflow-y: hidden;
+}
+
+.p-relative {
+  position: relative;
+}
+
